--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 
 spring.application.name=config-server
-server.port:9101
-
-spring.cloud.config.server.git.uri=https://github.com/AmarMicroDev/mcommerce-config-repo.git
+server.port=9101
+spring.cloud.config.server.git.uri=https://github.com/Bishem/mcommerce-config-repo.git
