less stinking and irritating code
cleaned project a little

--- a/microservice-expedition/src/main/resources/bootstrap.properties
+++ b/microservice-expedition/src/main/resources/bootstrap.properties
@@ -2,11 +2,12 @@ spring.application.name=microservice-expedition
 
 spring.cloud.config.uri=http://localhost:9101
 
-####
-#### LES PROPRIETES CI-DESSOUS SONT DANS LE GIT DE CONFIG SUIVANT :
-####
-####      https://github.com/Bishem/mcommerce-config-repo.git
-####
+#----------------------------------------------------------------
+# LES PROPRIETES CI-DESSOUS SONT DANS LE GIT DE CONFIG SUIVANT :
+#
+#       https://github.com/Bishem/mcommerce-config-repo.git
+#
+#----------------------------------------------------------------
 
 #server.port=9006
 #
