--- a/microservice-expedition/src/main/resources/bootstrap.properties
+++ b/microservice-expedition/src/main/resources/bootstrap.properties
@@ -15,7 +15,7 @@ spring.cloud.config.uri=http://localhost:9101
 #spring.jpa.show-sql=true
 #spring.h2.console.enabled=true
 #
-##défini l'encodage pour data.sql
+##defini l'encodage pour data.sql
 #spring.datasource.sql-script-encoding=UTF-8
 #
 ##Eureka
